[package]
name = "gat-gwm"
description = "A lightweight tray utility that keeps GlazeWM tiling direction aligned with the focused window."
authors = ["ParasiteDelta"]
version = "0.3.1"
edition = "2021"
license = "GPLv3"

[dependencies]
anyhow = "1.0.82"
serde_json = "1.0.116"
serde = { version = "1.0.217", features = ["derive"] }
tao = "0.34"
tray-icon = "0.24"
tungstenite = "0.26.1"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
codegen-units = 4
lto = true
opt-level = "s"
strip = "debuginfo"

[features]
no_console = []
