[package]
name = "glazetiler"
description = "A lightweight tray utility that keeps GlazeWM tiling direction aligned with the focused window."
authors = ["DutchRaptor"]
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Dutch-Raptor/glazetiler"
readme = "README.md"
keywords = ["glazewm", "tiling", "window-manager", "tray"]
categories = ["command-line-utilities"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
    "src/**",
]

[dependencies]
anyhow = "1.0.82"
serde_json = "1.0.116"
serde = { version = "1.0.217", features = ["derive"] }
tao = "0.34"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tray-icon = "0.24"
tungstenite = "0.26.1"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
codegen-units = 4
lto = true
opt-level = "s"
strip = "debuginfo"

